Blurry Image scaling fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,9 +16,9 @@ html {
 .container {
     position: relative;
     width: 80vw;
-    height: 40vw;
+    height: calc(45vw - 4vw);
     /* Adjusted to maintain a 16:9 aspect ratio */
-    cursor: url('../assets/images/mouse_cursor.png') 15 5, auto !important;
+    cursor: url('../assets/images/mouse_cursor.png') 15 10, auto !important;
 }
 
 button {
@@ -166,8 +166,6 @@ button {
 }
 
 #battle-canvas {
-    width: 100%;
-    height: 100%;
     border: 0.2vw solid #00f3ff;
     border-radius: 2vw;
 }
